objects/AuditTrailLoginAs__c.object
<CustomObject>
    <fields>
        <fullName>Log_Action__c</fullName>
        <label>Log Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Date__c</fullName>
        <label>Log Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Delegate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delegated User Contact record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AuditTrailLoginAs</relationshipLabel>
        <relationshipName>AuditTrailLoginAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log_Delegate_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log Delegate User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AuditTrailLoginAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log_Section__c</fullName>
        <label>Log Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSRUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AuditTrailLoginAs</label>
    <nameField>
        <displayFormat>AUD-{00000000}</displayFormat>
        <label>AuditTrailLoginAs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditTrailLoginAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>